# lc-gi

./: CMakeLists.txt  LICENSE
arrays_and_strings/: 3sum.cpp  CMakeLists.txt  backspace_string_compare.cpp  container_with_most_water.cpp  expressive_words.cpp  find_and_replace_in_string.cpp  jump_game.cpp  longest_substring_with_at_most_two_distinct_characters.cpp  longest_substring_without_repeating_characters.cpp  maximum_distance_to_closest_person.cpp  meeting_rooms_ii.cpp  merge_k_sorted_lists.cpp  minimum_cost_to_hire_k_workers.cpp  minimum_window_substring.cpp  missing_ranges.cpp  multiply_strings.cpp  next_closest_time.cpp  next_permutation.cpp  plus_one.cpp  read_N_characters_given_read4_ii.cpp  rotate_image.cpp  trapping_rain_water.cpp  valid_parentheses.cpp
design/: CMakeLists.txt  insert_delete_getrandom_O1.cpp  logger_rate_limiter.cpp  lru_cache.cpp  min_stack.cpp  serialize_and_deserialize_binary_tree.cpp
dynamic_programming/: CMakeLists.txt  best_time_to_buy_and_sell_stock.cpp  longest_palindromic_substring.cpp  maximum_product_subarray.cpp  maximum_subarray.cpp
linked_lists/: CMakeLists.txt  ListNode.hpp  add_two_numbers.cpp  copy_list_with_random_pointer.cpp  merge_two_lists.cpp  remove_nth_node_from_end_of_list.cpp
miscellaneous/: CMakeLists.txt  NaryNode.hpp  TreeNode.hpp  add_binary.cpp  crawler_log_folder.cpp  create_binary_tree_from_descriptions.cpp  encode_n_ary_tree_to_binary_tree.cpp  find_the_index_of_the_first_occurrence_in_a_string.cpp  find_the_minimum_and_maximum_number_of_nodes_between_critical_points.cpp  fruits_into_baskets.cpp  intersection_of_two_arrays_ii.cpp  interval_list_intersections.cpp  kth_distinct_string_in_an_array.cpp  lemonade_change.cpp  length_of_last_word.cpp  longest_common_prefix.cpp  longest_substring_with_at_most_k_distinct_characters.cpp  lucky_numbers_in_a_matrix.cpp  maximum_depth_of_binary_tree.cpp  maximum_depth_of_n_ary_tree.cpp  merge_nodes_in_between_zeros.cpp  merge_two_lists.cpp  minimum_deletions_to_make_string_balanced.cpp  minimum_difference_between_largest_and_smallest_value_in_three_moves.cpp  minimum_operations_to_make_array_values_equal_to_k.cpp  my_calendar_i.cpp  my_calendar_ii.cpp  my_calendar_iii.cpp  n_ary_tree_level_order_traversal.cpp  n_ary_tree_postorder_traversal.cpp  n_ary_tree_preorder_traversal.cpp  palindrome_number.cpp  pass_the_pillow.cpp  path_sum.cpp  remove_element.cpp  reverse_substrings_between_each_pair_of_parentheses.cpp  serialize_and_deserialize_n_ary_tree.cpp  sort_the_people.cpp  sum_of_digits_of_string_after_convert.cpp  symmetric_tree.cpp  (+3 more)
other/: CMakeLists.txt  candy.cpp  isomorphic_strings.cpp  strobogrammatic_number.cpp
recursion/: CMakeLists.txt  android_unlock_patterns.cpp  strobogrammatic_number_ii.cpp  word_search_ii.cpp  word_squares.cpp
sorting_and_searching/: CMakeLists.txt  count_of_smaller_numbers_after_self.cpp  find_first_and_last_position_of_element_in_sorted_array.cpp  median_of_two_sorted_arrays.cpp  merge_intervals.cpp  peak_index_in_a_mountain_array.cpp  valid_anagram.cpp
trees_and_graphs/: CMakeLists.txt  binary_tree_maximum_path_sum.cpp  count_complete_tree_nodes.cpp  course_schedule_ii.cpp  cracking_the_safe.cpp  decode_string.cpp  evaluate_division.cpp  flip_equivalent_binary_trees.cpp  longest_increasing_path_in_matrix.cpp  most_stones_removed_with_same_row_or_column.cpp  number_of_islands.cpp  robot_room_cleaner.cpp
